--- a/style.css
+++ b/style.css
@@ -8,24 +8,35 @@ body{
     padding: 20px;
     border: 2px solid black;
     border-radius: 8px;
-    width: 500px;
+    width: 400px;
     margin: 40px auto;
 }
 
 #display{
     flex: 1;
-    font-size: 24px;
     border: 2px solid black;
     border-radius: 8px;
     text-align: right;
     padding-left: auto;
     padding: 12px;
 }
+#main-display{
+    font-size: 24px;
+}
+#mini-display{
+    font-size: 12px;
+    text-align: left;
+}
 #button-container{
     margin-top: 20px;
-    border: 2px solid;
     display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 button{
-    width: 100px;
+    width: 120px;
+    height: 50px;
+    font-size: 18px;
+    font-weight: 600;
+    margin-bottom: 8px;
 }
